src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>AWP Lead Process</fullName>
        <description>AWP Lead Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Convert</fullName>
        </values>
        <values>
            <fullName>Follow-Up</fullName>
        </values>
        <values>
            <fullName>Introduction</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Back_of_the_House__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you talked to the back of the house</inlineHelpText>
        <label>Back of the House</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Service_Info__c</fullName>
        <formula>IF(
  ISBLANK( Field_Service_Person__c ),
    &quot; &quot;,  
       &quot;Phone: &quot;+ Field_Service_Person__r.Phone + BR() + &quot;Email: &quot; +  Field_Service_Person__r.Email
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Field Service Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Service_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Service Person</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Field Service</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Front_of_the_House__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you talked to the Front of the House</inlineHelpText>
        <label>Front of the House</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Literature__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you dropped off Genie literature.</inlineHelpText>
        <label>Literature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merchandise__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you have  dropped off Genie merchandise</inlineHelpText>
        <label>Merchandise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <picklist>
            <picklistValues>
                <fullName>Boom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scissor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telehandler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aluminium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Regional_VP_of_Sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional VP of Sales</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>of_Aluminum__c</fullName>
        <label># of Aluminum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Booms__c</fullName>
        <label># of Booms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Scissors__c</fullName>
        <label># of Scissors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Telehandlers__c</fullName>
        <label># of Telehandlers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>AWP_Lead_Process</fullName>
        <active>true</active>
        <businessProcess>AWP Lead Process</businessProcess>
        <label>AWP Lead Process</label>
    </recordTypes>
    <recordTypes>
        <fullName>Terex_Lead_Process</fullName>
        <active>true</active>
        <businessProcess>AWP Lead Process</businessProcess>
        <label>Terex Lead Process</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>